# wacom-plus

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: CheckIncludes.cmake
misc/: header.txt
src/: CMakeLists.txt  Makefile  compile.sh  config.h.in  core.c  core.h  flags.mk  gui_core.c  gui_core.h  gui_primary.c  gui_primary.h  main.c  output.mk  packages.mk  rules.mk  settings.c  settings.h  tablet.c  tablet.h  tablet_core.c  tablet_core.h  win_core.c  win_core.h  win_primary.c  win_primary.h  win_tablet.c  win_tablet.h
